--- a/views/page.ejs
+++ b/views/page.ejs
@@ -41,6 +41,7 @@
           <a class="list-group-item" href="/page/bootstrap3-typeahead">bootstrap3-typeahead</a>
           <a class="list-group-item" href="/page/bootstrap-fileinput">bootstrap-fileinput</a>
           <a class="list-group-item" href="/page/x-editable">x-editable</a>
+          <a class="list-group-item" href="/page/sweetalert2">sweetalert2</a>
         </ul>
         <div class="panel-footer">敬请期待...</div>
       </div>
