--- a/views/jquery/x-editable.ejs
+++ b/views/jquery/x-editable.ejs
@@ -8,7 +8,7 @@
     <div class="col-lg-6">
       <ul class="list-group">
         <li class="list-group-item"><span class="badge">text</span>用户名：<a href="#" class="text" data-type="text" data-pk="1" data-title="修改用户名">lupeng</a></li>
-        <li class="list-group-item"><span class="badge">textarea</span>备注：<a href="#" class="textare" data-type="textarea" data-pk="1" data-title="修改备注">lupeng</a></li>
+        <li class="list-group-item"><span class="badge">textarea</span>备注：<a href="#" class="textarea" data-type="textarea" data-pk="1" data-title="修改备注">lupeng</a></li>
         <li class="list-group-item">Morbi leo risus</li>
         <li class="list-group-item">Porta ac consectetur ac</li>
         <li class="list-group-item">Vestibulum at eros</li>
@@ -18,19 +18,22 @@
 </div>
 
 <!-- jQuery 3 -->
-<!-- <script src="/jquery/dist/jquery.js"></script> -->
-<script src="http://code.jquery.com/jquery-1.9.1.js"></script> 
+<script src="/jquery/dist/jquery.min.js"></script>
 <!-- Bootstrap 3.3.7 -->
 <script src="/bootstrap/dist/js/bootstrap.min.js"></script>
 <!-- x-editable -->
-<srcipt src="/x-editable/dist/bootstrap-editable/js/bootstrap-editable.js"></srcipt>
+<script src="//cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap3-editable/js/bootstrap-editable.min.js"></script>
 
 <script>
   $(function () {
     $('a.text').editable({
-      url: "/x-editable/post"
+      url: '/post',
+      type: 'text',
+      pk: 1,
+      name: 'username',
+      title: 'Enter username'
     });
-    $('a.textare').editable({
+    $('a.textarea').editable({
       url: '/x-editable/post'
     });
   });
