--- a/views/page.ejs
+++ b/views/page.ejs
@@ -4,46 +4,54 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-4">
-      <div class="panel panel-primary">
-        <div class="panel-heading">表格插件</div>
+      <div class="panel panel-danger">
+        <div class="panel-heading">jQuery 专区</div>
         <div class="panel-body">
-          <p>包含在线表格，以及表格辅助插件</p>
+          包含基于 jQuery & bootstrap 的插件，jQuery 版本为 3.4.0，bootstrap 版本为 3.3.7
+          <br/>注意：bootstrap5 将移除对 jQuery 的依赖。
         </div>
         <ul class="list-group">
-          <a class="list-group-item" href="/page/bootstrap-table">bootstrap-table</a>
-          <a class="list-group-item" href="/page/datatables">datatables</a>
-          <a class="list-group-item" href="/page/jquery-tabledit">jquery-tabledit</a>
+          <a class="list-group-item" href="/page/bootstrap-table">bootstrap-table<span class="badge">在线表格</span></a>
+          <a class="list-group-item" href="/page/datatables">datatables<span class="badge">在线表格</span></a>
+          <a class="list-group-item" href="/page/jquery-tabledit">jquery-tabledit<span class="badge">表格辅助</span></a>
+          <a class="list-group-item" href="/page/bootstrap-datepicker">bootstrap-datepicker<span class="badge">日期选择</span></a>
+          <a class="list-group-item" href="/page/daterangepicker">daterangepicker<span class="badge">日期选择</span></a>
+          <a class="list-group-item" href="/page/jquery-validation">jquery-validation<span class="badge">表单校验</span></a>
+          <a class="list-group-item" href="/page/bootstrap3-typeahead">bootstrap3-typeahead<span class="badge">输入增强</span></a>
+          <a class="list-group-item" href="/page/bootstrap-fileinput">bootstrap-fileinput<span class="badge">上传增强</span></a>
+          <a class="list-group-item" href="/page/x-editable">x-editable<span class="badge">编辑增强</span></a>
         </ul>
-        <div class="panel-footer">敬请期待...</div>
+        <div class="panel-footer">期待更多...</div>
       </div>
     </div>
     <div class="col-lg-4">
-      <div class="panel panel-primary">
-        <div class="panel-heading">日期插件</div>
+      <div class="panel panel-warning">
+        <div class="panel-heading">原生专区</div>
         <div class="panel-body">
-          <p>包含日期选择器，日期库等</p>
+          包含原生 JS 插件，以及一些库函数等
         </div>
         <ul class="list-group">
-          <a class="list-group-item" href="/page/bootstrap-datepicker">bootstrap-datepicker</a>
-          <a class="list-group-item" href="/page/daterangepicker">daterangepicker</a>
+            <a class="list-group-item" href="/page/sweetalert2">sweetalert2<span class="badge">弹窗增强</span></a>
+            <a class="list-group-item" href="https://blueimp.github.io/JavaScript-MD5/" target="_blank">js-md5 <span class="badge">加密库</span><span class="text-danger" title="跳到官方"><i class="glyphicon glyphicon-share-alt"></i></span></a>
+            <a class="list-group-item" href="http://momentjs.com/" target="_blank">moment <span class="badge">日期库</span><span class="text-danger" title="跳到官方"><i class="glyphicon glyphicon-share-alt"></i></span></a>
+            <a class="list-group-item" href="/page/echarts">echarts<span class="badge">图表</span></a>
         </ul>
-        <div class="panel-footer">敬请期待...</div>
+        <div class="panel-footer">期待更多...</div>
       </div>
     </div>
     <div class="col-lg-4">
-      <div class="panel panel-primary">
-        <div class="panel-heading">其他</div>
+      <div class="panel panel-success">
+        <div class="panel-heading">Vue 专区</div>
         <div class="panel-body">
-          <p>jQuery & bootstrap 相关插件</p>
+          基于 Vue 的插件
         </div>
         <ul class="list-group">
-          <a class="list-group-item" href="/page/jquery-validation">jquery-validation</a>
+          <!-- <a class="list-group-item" href="/page/jquery-validation">jquery-validation</a>
           <a class="list-group-item" href="/page/bootstrap3-typeahead">bootstrap3-typeahead</a>
           <a class="list-group-item" href="/page/bootstrap-fileinput">bootstrap-fileinput</a>
-          <a class="list-group-item" href="/page/x-editable">x-editable</a>
-          <a class="list-group-item" href="/page/sweetalert2">sweetalert2</a>
+          <a class="list-group-item" href="/page/x-editable">x-editable</a> -->      
         </ul>
-        <div class="panel-footer">敬请期待...</div>
+        <div class="panel-footer">期待更多...</div>
       </div>
     </div>
   </div>
