--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -73,9 +73,11 @@
   </nav>
 </div>
 <div class="container">
-  <p class="lead"><%= title %>
-    <small style="font-size: 0.5em"><a class="label label-warning" href="<%= official_link %>" target="_blank">官方地址</a></small>
-    <small style="font-size: 0.5em"><a class="label label-success" href="<%= doc_link %>" target="_blank">文档库地址</a></small>
-  </p>
+  <h3 style="margin-top:0;margin-bottom:20px"><%= title %>
+    <% if(url){ %>
+    <small><a class="label label-warning" href="<%= official_link %>" target="_blank">官方地址</a></small>
+    <% } %>
+    <small><a class="label label-success" href="<%= doc_link %>" target="_blank">文档库地址</a></small>
+  </h3>
 </div>
 <a class="github-fork-ribbon" href="https://github.com/pengloo53/js-plugin-example" data-ribbon="Fork me on GitHub" title="Fork me on GitHub">Fork me on GitHub</a>
