--- a/views/jquery/x-editable.ejs
+++ b/views/jquery/x-editable.ejs
@@ -34,7 +34,7 @@
 <!-- moment -->
 <script src="/moment/min/moment.min.js"></script>
 <!-- x-editable -->
-<script src="//cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap3-editable/js/bootstrap-editable.min.js"></script>
+<script src="/x-editable/dist/bootstrap3-editable/js/bootstrap-editable.min.js"></script>
 
 <script>
   $(function () {
