--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -44,14 +44,14 @@
                 <ul class="dropdown-menu">
                   <!-- <li><a href="#">Action</a></li> -->
                   <li class="disabled"><a href="javascript:void(0)">库</a></li>
-                  <li class=""><a href="http://momentjs.com/" target="_blank">moment <span class="text-danger" title="跳到官方"><i class="glyphicon glyphicon-share-alt"></i></span></a></li>
-                  <li><a href="https://blueimp.github.io/JavaScript-MD5/">js-md5 <span class="text-danger" title="跳到官方"><i class="glyphicon glyphicon-share-alt"></i></span></a></li>
+                  <li class=""><a href="https://www.yuque.com/pengloo53/web/moment" target="_blank">moment <span class="text-danger" title="跳到官方"><i class="glyphicon glyphicon-share-alt"></i></span></a></li>
+                  <li><a href="https://www.yuque.com/pengloo53/web/js-md5">js-md5 <span class="text-danger" title="跳到官方"><i class="glyphicon glyphicon-share-alt"></i></span></a></li>
                   <li role="separator" class="divider"></li>
                   <li class="disabled"><a href="javascript:void(0)">增强</a></li>
                   <li class=""><a href="/page/sweetalert2">sweetalert2</a></li>
                   <li role="separator" class="divider"></li>
                   <li class="disabled"><a href="javascript:void(0)">图表</a></li>
-                  <li class=""><a href="/page/echarts">echarts</a></li>
+                  <!-- <li class=""><a href="/page/echarts">echarts</a></li> -->
                 </ul>
               </li>
               <li class="dropdown <%= url=='vue'?'active':'' %>">
