--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -33,9 +33,14 @@
                   <li class="disabled"><a href="javascript:void(0)">校验</a></li>
                   <li class=""><a href="/page/jquery-validation">jquery-validation</a></li>
                   <li role="separator" class="divider"></li>
-                  <li class="disabled"><a href="javascript:void(0)">增强</a></li>
+                  <li class="disabled"><a href="javascript:void(0)">输入增强</a></li>
                   <li class=""><a href="/page/bootstrap3-typeahead">bootstrap3-typeahead</a></li>
+                  <li role="separator" class="divider"></li>
+                  <li class="disabled"><a href="javascript:void(0)">上传增强</a></li>
                   <li class=""><a href="/page/bootstrap-fileinput">bootstrap-fileinput</a></li>
+                  <li class=""><a href="/page/dropify">dropify</a></li>
+                  <li role="separator" class="divider"></li>
+                  <li class="disabled"><a href="javascript:void(0)">编辑增强</a></li>
                   <li class=""><a href="/page/x-editable">x-editable</a></li>
                 </ul>
               </li>
