--- a/views/jquery/bootstrap-datepicker.ejs
+++ b/views/jquery/bootstrap-datepicker.ejs
@@ -4,6 +4,7 @@
 
 <% include ../layout/header.ejs %>
 <div class="container">
+  <% include ../layout/pageHeader.ejs %>
   <div class="row">
     <div class="col-lg-8">
       <form role="form" action="#" method="POST" id="webconfig">
