--- a/views/jquery/bootstrap-table.ejs
+++ b/views/jquery/bootstrap-table.ejs
@@ -6,6 +6,7 @@
 
 <% include ../layout/header.ejs %>
 <div class="container">
+    <% include ../layout/pageHeader.ejs %>
     <div class="row">
         <div class="col-lg-12">
             <div id="toolbar">
