--- a/views/jquery/bootstrap-fileinput.ejs
+++ b/views/jquery/bootstrap-fileinput.ejs
@@ -4,6 +4,7 @@
 
 <% include ../layout/header.ejs %>
 <div class="container">
+  <% include ../layout/pageHeader.ejs %>
   <div class="row">
     <div class="form-group col-lg-8">
       <label for="" class="control-label">默认样式</label>
