--- a/views/jquery/bootstrap3-typeahead.ejs
+++ b/views/jquery/bootstrap3-typeahead.ejs
@@ -2,6 +2,7 @@
 <% include ../layout/header.ejs %>
 
 <div class="container">
+  <% include ../layout/pageHeader.ejs %>
   <div class="row">
     <div class="form-group col-lg-6">
       <label for="" class="control-label">搜索</label>
