--- a/views/jquery/datatables.ejs
+++ b/views/jquery/datatables.ejs
@@ -7,6 +7,7 @@
 
 <% include ../layout/header.ejs %>
 <div class="container">
+  <% include ../layout/pageHeader.ejs %>
   <div class="row">
     <div class="col-lg-12">
       <table id="table" class="table table-bordered table-striped responsive nowrap display" style="width: 100%">
