--- a/views/jquery/dropify.ejs
+++ b/views/jquery/dropify.ejs
@@ -4,6 +4,7 @@
 
 <% include ../layout/header.ejs %>
 <div class="container">
+  <% include ../layout/pageHeader.ejs %>
   <div class="row">
     <div class="form-group col-lg-8">
       <label for="" class="control-label">默认样式</label>
@@ -28,12 +29,12 @@
 <script>
   $(function () {
     $('#file').dropify({
-      // height: '500',
+      height: '500',
       maxFileSizePreview: '5M',
       minWidth: '200',
       // errorsPosition: 'outside',
       allowedFileExtensions: 'pdf png jpg',
-      allowedFormats: 'portrait',
+      // allowedFormats: 'portrait',
       messages: {
         'default': 'Drag and drop a file here or click',
         'replace': 'Drag and drop or click to replace',
