--- a/views/jquery/jquery-tabledit.ejs
+++ b/views/jquery/jquery-tabledit.ejs
@@ -2,6 +2,7 @@
 
 <% include ../layout/header.ejs %>
 <div class="container">
+  <% include ../layout/pageHeader.ejs %>
   <div class="row">
     <div class="col-lg-12">
       <table class="table table-bordered table-striped">
