--- a/views/original/sweetalert2.ejs
+++ b/views/original/sweetalert2.ejs
@@ -4,6 +4,7 @@
 
 <% include ../layout/header.ejs %>
 <div class="container">
+  <% include ../layout/pageHeader.ejs %>
   <div class="row">
     <div class="col-lg-6">
       <ul class="list-group ">
