--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,3 +2,8 @@ body {
   /*padding: 50px;*/
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
+
+.lp-footer{
+  position: absolute;
+  bottom: 10px;
+}
