--- a/views/layout/footer.ejs
+++ b/views/layout/footer.ejs
@@ -1,7 +1,12 @@
-<!-- <footer>
+<footer>
   <hr />
   <div class="container">
-    Copyright &copy; 2019-2020. All rights reserved. 
-    <a href="<%= web.author_twitter %>">Twitter </a> · <a href="<%= web.author_weibo %>">Weibo </a>
+    <div class="text-center">
+      Copyright &copy; 2019-2020. All rights reserved. 
+    </div>
+    <!-- <a href="<%= web.author_twitter %>">Twitter </a> · <a href="<%= web.author_weibo %>">Weibo </a> -->
+    <div class="text-center">
+      <a href="http://www.beian.miit.gov.cn/">京ICP备17071687号-2</a>
+    </div>
   </div>
-</footer> -->
+</footer>
